# ballistic-trajectory-simulation

./: .gitignore  LICENSE  README.md
case-01-max-range/: CMakeLists.txt  README.md
case-01-max-range/apps/osgearth_viewer/assets/: readymap.earth
case-01-max-range/apps/osgearth_viewer/src/: main.cpp
case-01-max-range/cmake/: FindFontconfig.cmake  FindOpenSceneGraph.cmake
case-01-max-range/modules/ballistics/include/ballistics/: config.hpp  constants.hpp  interpolation.hpp  live_writer.hpp  logging.hpp  search.hpp  solver.hpp  types.hpp
case-01-max-range/modules/ballistics/src/: defaults.cpp  dynamics.cpp  live_writer.cpp  rk4.cpp  search.cpp  solver.cpp  trajectory.cpp
case-01-max-range/scripts/: build_solver.cmd  run_osgearth.bat  run_solver.ps1
case-01-max-range/scripts/matlab/: plot_exported_results.m  trajectory.m  usage.md
case-02-target-guidance/: CMakeLists.txt  README.md
case-02-target-guidance/apps/osgearth_viewer/src/: app_icon.rc  main.cpp
case-02-target-guidance/apps/solver_cli/src/: main.cpp
case-02-target-guidance/modules/ballistics/src/: config.cpp  defaults.cpp  dynamics.cpp  interpolation.cpp  live_writer.cpp  search.cpp  solver.cpp  trajectory.cpp
case-02-target-guidance/scripts/: build_solver.ps1  run_osgearth.bat
case-02-target-guidance/scripts/matlab/: direction.m  makeup.py  plot_exported_results.m
case-03-defense-zone/: README.md
case-03-defense-zone/apps/osgearth_viewer/src/: main.cpp
case-03-defense-zone/scripts/: run_solver.cmd
case-03-defense-zone/scripts/matlab/: alpha_figure.m  optimal-trajectory.csv  plot_blocked_attack_zone.m  plot_exported_results.m  usage.md
(+19 files in other folders)
